--- a/index.html
+++ b/index.html
@@ -169,14 +169,14 @@
       <ul class="flex items-center justify-center gap-4">
         <li><a href="https://www.linkedin.com/in/nadivaaa-almaghfiraa-84726b333/"><i class="fab fa-linkedin-in"></i></a></li>
         <li><a href="https://www.instagram.com/nadivalsv/"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="https://github.com/nadiva26"><i class="fab fa-github"></i></a></li>
+        <li><a href="https://github.com/nadivaa26"><i class="fab fa-github"></i></a></li>
       </ul>
     </div>
   </aside>
   <section class="bg-white shadow">
       <p class="text-black mt-4">Salam hangat, <strong>- Nadiva</strong></p>
     </div>
-    
+    </section>
   </section>
 
 <!-- Footer -->
