--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portofolio -Nadiva</title>
+  <title>Profil Nadiva</title>
 
   <!-- Tailwind CSS CDN -->
   
