--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
 
   <!-- Mobile Menu -->
-  <div id="navbar-links-mobile" class="md:hidden hidden flex flex-col space-y-3 mt-3 px-6 pb-4 bg-gray-800 text-center">
+  <div id="navbar-links-mobile" class="md:hidden hidden flex flex-col space-y-3 mt-3 px-6 pb-4 bg-white text-center">
       <a href="#home" class="text-white hover:text-white">Beranda</a>
       <a href="#about" class="text-white hover:text-white">Tentang Saya</a>
       <a href="#pengalaman" class="text-white hover:text-white" id="scroll-to-pengalamant">Pengalaman Saya</a>
