--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Profil Nadiva</title>
+  <title>Portofolio -Nadiva</title>
 
   <!-- Tailwind CSS CDN -->
   
@@ -24,7 +24,7 @@
 </head>
 <body class="bg-white">
   <!-- Navbar -->
-<nav style="background-color: #749BC2;">
+<nav style="background-color: #0F828C;">
   <div class="container mx-auto flex items-start justify-between px-6 py-2">
     <!-- Logo -->
     <div class="text-white text-lg font-semibold">Nadiva Almaghfira</div>
@@ -50,7 +50,7 @@
   </div>
 
   <!-- Mobile Menu -->
-  <div id="navbar-links-mobile" class="md:hidden hidden flex flex-col space-y-3 mt-3 px-6 pb-4 bg-[#749BC2] text-center">
+  <div id="navbar-links-mobile" class="md:hidden hidden flex flex-col space-y-3 mt-3 px-6 pb-4 bg-gray-800 text-center">
       <a href="#home" class="text-white hover:text-white">Beranda</a>
       <a href="#about" class="text-white hover:text-white">Tentang Saya</a>
       <a href="#pengalaman" class="text-white hover:text-white" id="scroll-to-pengalamant">Pengalaman Saya</a>
@@ -62,15 +62,15 @@
 </div>
 
 <!-- SECTION -->
-<section class="py-8 pt-16 flex items-center justify-center bg-gradient-to-b from-[#749BC2] to-white">
+<section class="py-8 pt-16 flex items-center justify-center bg-gradient-to-b from-[#0F828C] to-white">
   <div class="text-center max-w-2xl px-6">
     <img src="nadivaaa.jpeg" alt="Foto Profil" class="mx-auto w-40 h-40 rounded-full shadow-lg mb-6">
     <h1 class="text-4xl md:text-5xl font-bold text-gray-800">Nadiva Almaghfira</h1>
     <p class="text-lg text-gray-600 mt-2">Student | Learn For The Future</p>
 
     <div class="mt-6 flex justify-center gap-4">
-      <a href="#contact" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-2 rounded-full font-medium shadow">Hubungi Saya</a>
-      <a href="#about" class="border border-blue-500 text-blue-500 px-6 py-2 rounded-full font-medium hover:bg-blue-50">Tentang Saya</a>
+<a href="#contact" style="background-color:#70b2df;" class="hover:bg-blue-600 text-white px-6 py-2 rounded-full font-medium shadow">Hubungi Saya</a>
+      <a href="#about" class="border border-[#70b2df] text-blue-500 px-6 py-2 rounded-full font-medium hover:bg-blue-50">Tentang Saya</a>
     </div>
   </div>
 </section>
@@ -180,7 +180,7 @@
   </section>
 
 <!-- Footer -->
-<footer class="py-10 bg-gradient-to-b from-white to-[#749BC2] shadow">
+<footer class="py-10 bg-gradient-to-b from-white to-[#0F828C] shadow">
   <div class="container mx-auto px-6 text-center">
     <p>&copy; 2025 Create by Nadiva Almaghfira.</p>
   </div>
