--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body class="bg-white">
   <!-- Navbar -->
-<nav style="background-color: #0F828C;">
+<nav style="background-color: #199CA6;">
   <div class="container mx-auto flex items-start justify-between px-6 py-2">
     <!-- Logo -->
     <div class="text-white text-lg font-semibold">Nadiva Almaghfira</div>
@@ -50,7 +50,7 @@
   </div>
 
   <!-- Mobile Menu -->
-  <div id="navbar-links-mobile" class="md:hidden hidden flex flex-col space-y-3 mt-3 px-6 pb-4 bg-gray-800 text-center">
+  <div id="navbar-links-mobile" class="md:hidden hidden flex flex-col space-y-3 mt-3 px-6 pb-4 bg-[#0F828C] text-center">
       <a href="#home" class="text-white hover:text-white">Beranda</a>
       <a href="#about" class="text-white hover:text-white">Tentang Saya</a>
       <a href="#pengalaman" class="text-white hover:text-white" id="scroll-to-pengalamant">Pengalaman Saya</a>
@@ -62,15 +62,15 @@
 </div>
 
 <!-- SECTION -->
-<section class="py-8 pt-16 flex items-center justify-center bg-gradient-to-b from-[#0F828C] to-white">
+<section class="py-8 pt-16 flex items-center justify-center bg-gradient-to-b from-[#199CA6] to-white">
   <div class="text-center max-w-2xl px-6">
     <img src="nadivaaa.jpeg" alt="Foto Profil" class="mx-auto w-40 h-40 rounded-full shadow-lg mb-6">
-    <h1 class="text-4xl md:text-5xl font-bold text-gray-800">Nadiva Almaghfira</h1>
-    <p class="text-lg text-gray-600 mt-2">Student | Learn For The Future</p>
+    <h1 class="text-4xl md:text-5xl font-bold text-[#0F828C]">Nadiva Almaghfira</h1>
+    <p class="text-lg text-[#0F828C] mt-2">Student | Learn For The Future</p>
 
     <div class="mt-6 flex justify-center gap-4">
-<a href="#contact" style="background-color:#70b2df;" class="hover:bg-blue-600 text-white px-6 py-2 rounded-full font-medium shadow">Hubungi Saya</a>
-      <a href="#about" class="border border-[#70b2df] text-blue-500 px-6 py-2 rounded-full font-medium hover:bg-blue-50">Tentang Saya</a>
+<a href="#contact" style="background-color:#2aabb7;" class="hover:bg-blue-600 text-white px-6 py-2 rounded-full font-medium shadow">Hubungi Saya</a>
+      <a href="#about" class="border border-[#2aabb7] text-[#2aabb7] px-6 py-2 rounded-full font-medium hover:bg-blue-50">Tentang Saya</a>
     </div>
   </div>
 </section>
@@ -83,11 +83,11 @@
   <div class="custom-shape-divider-top w-full overflow-hidden leading-[0]">
 </div>
     <div class="container mx-auto px-6 py-16 text-center" data-aos="fade-up">
-      <h1 class="text-4xl font-bold text-black mb-6" data-aos="fade-down" data-aos-duration="600">Tentang Saya</h1>
-<p class="text-gray-600 mb-6" data-aos="fade-down" data-aos-duration="800">Perkenalkan, nama saya Nadiva Almaghfira. Saya kerap disapa Nadiva.</p>
-<p class="text-gray-600 mb-6" data-aos="fade-down" data-aos-duration="800">Saya lahir di Kota Malang pada tanggal 26 Februari 2008.</p>
-<p class="text-gray-600 mb-6" data-aos="fade-down" data-aos-duration="800">Saya senang mendengarkan musik karena membantu saya lebih fokus dan rileks.</p>
-<p class="text-gray-600 mb-6" data-aos="fade-down" data-aos-duration="800">Saya memiliki ketertarikan untuk mengeksplorasi hal-hal baru, terutama di dunia pemrograman dan teknologi.</p>
+      <h1 class="text-4xl font-bold text-[#199CA6] mb-6" data-aos="fade-down" data-aos-duration="600">Tentang Saya</h1>
+<p class="text-[#199CA6] mb-6" data-aos="fade-down" data-aos-duration="800">Perkenalkan, nama saya Nadiva Almaghfira. Saya kerap disapa Nadiva.</p>
+<p class="text-[#199CA6] mb-6" data-aos="fade-down" data-aos-duration="800">Saya lahir di Kota Malang pada tanggal 26 Februari 2008.</p>
+<p class="text-[#199CA6] mb-6" data-aos="fade-down" data-aos-duration="800">Saya senang mendengarkan musik karena membantu saya lebih fokus dan rileks.</p>
+<p class="text-[#199CA6] mb-6" data-aos="fade-down" data-aos-duration="800">Saya memiliki ketertarikan untuk mengeksplorasi hal-hal baru, terutama di dunia pemrograman dan teknologi.</p>
     </div>
     </section>
 
@@ -96,49 +96,59 @@
     <div class="custom-shape-divider-top w-full overflow-hidden leading-[0]">
 </div>
   <div class="container mx-auto px-6 text-center" data-aos="fade-up">
-    <h1 class="text-4xl font-bold text-gray-900 mb-8">Pengalaman Saya</h1>
-    <h5 class="text font-semibold text-gray-900">Pengalaman di bidang Pemrograman</h5>
+    <h1 class="text-4xl font-bold text-[#199CA6] mb-6">Pengalaman Saya</h1>
+    <h5 class="text font-semibold text-[#2aabb7] mb-6">Pengalaman di bidang Pemrograman</h5>
     
-    <div class="flex flex-wrap justify-center gap-6">
-      <!-- Card 1 -->
-      <div class="bg-white rounded-lg shadow-md p-4 w-full sm:w-3/3 md:w-1/4" data-aos="fade-up">
-        <div class="aspect-4-3">
-          <img src="im3.png" alt="Project 1" class="w-full rounded-t-lg mx-auto">
-        </div>
-        <h3 class="text-lg font-semibold mt-6">Website E-Commerce - Codeigniter</h3>
-        <p class="text-gray-600">Saya pernah membuat Website E-Commerce. Website ini dibangun dengan CodeIgniter 3, MySQL, dan Bootstrap. Fitur login user dan admin, manajemen produk, pemesanan, dan invoice pemesanan produk.</p>
-      </div>
+<div class="flex flex-wrap justify-center gap-6">
+  <!-- Card 1 -->
+  <div class="bg-white rounded-lg shadow-md p-4 w-full sm:w-4/4 md:w-1/4" data-aos="fade-up">
+    <div class="aspect-4-3">
+      <img src="im3.png" alt="Project 1" class="w-full rounded-t-lg mx-auto">
+    </div>
+    <h3 class="text-[#199CA6] font-semibold mt-6">Website E-Commerce - Codeigniter</h3>
+    <p class="text-[#199CA6]">Saya pernah membuat Website E-Commerce. Website ini dibangun dengan CodeIgniter 3, MySQL, dan Bootstrap...</p>
+  </div>
 
-      <!-- Card 2 -->
-      <div class="bg-white rounded-lg shadow-md p-4 w-full sm:w-3/3 md:w-1/4" data-aos="fade-up" data-aos-delay="100">
-        <div class="aspect-4-3">
-          <img src="im.png" alt="Project 2" class="w-full rounded-t-lg mx-auto">
-        </div>
-        <h3 class="text-lg font-semibold mt-6">Website E-Commerce - Django</h3>
-        <p class="text-gray-600">Saya pernah membuat Website E-Commerce. Website ini dibuat dengan Django dan SQLite. Fitur login dan logout, register, keranjang, checkout, dan riwayat pesanan.</p>
-      </div>
-      <!--Card 3-->
-       <div class="bg-white rounded-lg shadow-md p-4 w-full sm:w-3/3 md:w-1/4" data-aos="fade-up">
-        <div class="aspect-4-3">
-          <img src="sertifikat.png" alt="Sertifikat" class="w-full rounded-t-lg mx-auto">
-        </div>
-        <h3 class="text-lg font-semibold mt-6">Mengikuti pelatihan belajar dasar Pemrograman Website</h3>
-        <p class="text-gray-600">Pada tahun 2024, saya mengikuti pelatihan dasar Pemrograman Website melalui platform Dicoding. Di sini saya mempelajari HTML, CSS, dan teknik layout responsif.</p>
-      </div>
-        </div>
+  <!-- Card 2 -->
+  <div class="bg-white rounded-lg shadow-md p-4 w-full sm:w-4/4 md:w-1/4" data-aos="fade-up" data-aos-delay="100">
+    <div class="aspect-4-3">
+      <img src="im.png" alt="Project 2" class="w-full rounded-t-lg mx-auto">
+    </div>
+    <h3 class="text-[#199CA6] font-semibold mt-6">Website E-Commerce - Django</h3>
+    <p class="text-[#199CA6]">Saya pernah membuat Website E-Commerce dengan Django dan SQLite...</p>
+  </div>
+
+  <!-- Card 3 -->
+  <div class="bg-white rounded-lg shadow-md p-4 w-full sm:w-4/4 md:w-1/4" data-aos="fade-up">
+    <div class="aspect-4-3">
+      <img src="sertifikat.png" alt="Sertifikat" class="w-full rounded-t-lg mx-auto">
+    </div>
+    <h3 class="text-[#199CA6] font-semibold mt-6">Mengikuti pelatihan belajar dasar Pemrograman Website</h3>
+    <p class="text-[#199CA6]">Pada tahun 2024, saya mengikuti pelatihan melalui Dicoding...</p>
+  </div>
+
+  <!-- Card 4 -->
+  <div class="bg-white rounded-lg shadow-md p-4 w-full sm:w-4/4 md:w-1/4 mx-auto" data-aos="fade-up">
+    <div class="aspect-4-3">
+      <img src="py-sertif.png" alt="Sertifikat" class="w-full rounded-t-lg mx-auto">
+    </div>
+    <h3 class="text-[#199CA6] font-semibold mt-6">Mengikuti pelatihan belajar Python</h3>
+    <p class="text-[#199CA6]">Pada tahun 2024, saya mengikuti pelatihan dasar bahasa Pemrograman Python, Saya belajar melalui Website Kaggle</p>
+  </div>
+</div>
     </section>
     <section id="pengalaman2" class="py-8 bg-white">
    <div class="container mx-auto px-6 text-center" data-aos="fade-up">
-    <p class="text font-semibold text-gray-900 mb-6">Pengalaman Organisasi</p>
+    <p class="text font-semibold text-[#199CA6] mb-6">Pengalaman Organisasi</p>
     <!-- Flex container -->
     <div class="flex flex-col md:flex-row md:justify-center md:gap-6 items-stretch">
       <!-- Card 1 -->
       <div class="bg-white rounded-lg shadow-md p-4 w-full md:w-1/3 mb-6 md:mb-0">
         <div class="aspect-5-4">
-          <img src="wk.jpeg" alt="Wakil Ketua" class="w-full rounded-t-lg mx-auto">
+          <img src="sertif.png" alt="Wakil Ketua" class="w-full rounded-t-lg mx-auto">
         </div>
-        <h3 class="text-lg font-semibold mt-6">Wakil Ketua Umum 2024–2025</h3>
-       <p class="text-gray-600 text-left">
+        <h3 class="text-[#199CA6] font-semibold mt-6">Wakil Ketua Umum 2024–2025</h3>
+       <p class="text-[#199CA6] text-left">
         Pada tahun 2024–2025, saya menjabat sebagai Wakil Ketua dalam organisasi Badan Dakwah Islam (BDI). Dalam peran ini, saya belajar keterampilan seperti pemecahan masalah, manajemen waktu, public speaking, kerja sama tim, serta membangun komunikasi yang baik dengan pembina, pengurus, dan anggota lainnya.
         </p>
       </div>
@@ -147,8 +157,8 @@
         <div class="aspect-4-3">
           <img src="p (1).jpeg" alt="Sertifikat MC" class="w-full rounded-t-lg mx-auto">
         </div>
-        <h3 class="text-lg font-semibold mt-6">Kegiatan Kepanitiaan</h3>
-        <p class="text-gray-600 text-left">
+        <h3 class="text-[#199CA6] font-semibold mt-6">Kegiatan Kepanitiaan</h3>
+        <p class="text-[#199CA6] text-left">
          Selama aktif di organisasi, saya terlibat dalam berbagai kegiatan kepanitiaan. Saya pernah menjadi Ketua Koordinator, Wakil Ketua Pelaksana, Sie Acara, Sie Humas, dan Pengisi Acara. Dari pengalaman ini, saya belajar bekerja sama dalam tim, memecahkan masalah, mengelola keuangan acara, serta meningkatkan rasa tanggung jawab dan kepemimpinan.
        </p>
       </div>
@@ -158,10 +168,10 @@
   <!-- Contact Section -->
  <section id="contact" class="bg-white shadow">
     <div class="container mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold text-black mb-6">Kontak Saya</h2>
-      <p class="text-gray-600">Terima kasih telah mengenal saya!</p>
-      <p class="text-gray-600">Hubungi saya via sosial media atau email berikut:</p>
-      <p class="text-gray-600 mt-2">
+      <h2 class="text-3xl font-bold text-[#199CA6] mb-6">Kontak Saya</h2>
+      <p class="text-[#199CA6]">Terima kasih telah mengenal saya!</p>
+      <p class="text-[#199CA6]">Hubungi saya via sosial media atau email berikut:</p>
+      <p class="text-[#199CA6] mt-2">
         Email: <a href="mailto:nadivalmaghfira2@gmail.com" class="text-blue-500 underline">nadivalmaghfira2@gmail.com</a>
       </p>
         <aside>
@@ -174,7 +184,7 @@
     </div>
   </aside>
   <section class="bg-white shadow">
-      <p class="text-black mt-4">Salam hangat, <strong>- Nadiva</strong></p>
+      <p class="text-[#199CA6] mt-4">Salam hangat, <strong>- Nadiva</strong></p>
     </div>
     </section>
   </section>
