--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <h3 class="text-2xl font-semibold text-center text-pink-600 mb-10" data-aos="fade-up">Pengalaman Organisasi</h3>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-5xl mx-auto">
         <div class="bg-white rounded-lg shadow-md p-6" data-aos="fade-up">
-          <img src="sertif.png" alt="Wakil Ketua" class="rounded-lg mb-4">
+          <img src="sertifikat.png" alt="Wakil Ketua" class="rounded-lg mb-4">
           <h4 class="text-lg font-semibold text-pink-800">Wakil Ketua Umum BDI 2024–2025</h4>
           <p class="text-sm">Menjadi Wakil Ketua Umum Badan Dakwah Islam, belajar kepemimpinan, komunikasi, dan manajemen waktu.</p>
         </div>
