--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <h2 class="text-3xl font-bold text-pink-600 mb-6" data-aos="fade-up">Tentang Saya</h2>
     <p class="mb-2">Halo! Saya Nadiva Almaghfira, lahir di Malang pada 26 Februari 2008.</p>
     <p class="mb-2">Saya suka mendengarkan musik, menjelajahi teknologi, dan belajar pemrograman.</p>
-    <p>Saya tertarik dengan dunia IT dan senang belajar hal-hal baru secara mandiri.</p>
+    <p>Saya tertarik dengan dunia IT dan senang belajar hal-hal baru.</p>
   </section>
 
   <!-- Pengalaman Section -->
@@ -71,23 +71,23 @@
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 max-w-6xl mx-auto">
       <div class="bg-white rounded-lg shadow-md p-4" data-aos="fade-up">
         <img src="im3.png" alt="Codeigniter Project" class="rounded-lg mb-4">
-        <h3 class="font-semibold text-pink-800">E-Commerce - CodeIgniter</h3>
-        <p class="text-sm">Mengembangkan website toko online menggunakan CodeIgniter 3 dan MySQL.</p>
+        <h3 class="font-semibold text-pink-800">Website E-Commerce - CodeIgniter</h3>
+        <p class="text-sm">Membuat website toko online menggunakan CodeIgniter 3 dan MySQL.</p>
       </div>
       <div class="bg-white rounded-lg shadow-md p-4" data-aos="fade-up" data-aos-delay="100">
         <img src="im.png" alt="Django Project" class="rounded-lg mb-4">
-        <h3 class="font-semibold text-pink-800">E-Commerce - Django</h3>
+        <h3 class="font-semibold text-pink-800"> Website E-Commerce - Django</h3>
         <p class="text-sm">Membuat website toko online menggunakan Django dan SQLite.</p>
       </div>
       <div class="bg-white rounded-lg shadow-md p-4" data-aos="fade-up" data-aos-delay="200">
         <img src="sertifikat.png" alt="Dicoding Certificate" class="rounded-lg mb-4">
         <h3 class="font-semibold text-pink-800">Pelatihan Website</h3>
-        <p class="text-sm">Mengikuti pelatihan dasar pemrograman web melalui platform Dicoding.</p>
+        <p class="text-sm">Saya pernah mengikuti pelatihan dasar pemrograman web melalui platform Dicoding. disini saya belajar pembuatan website sederhana dan teknik layouting.</p>
       </div>
       <div class="bg-white rounded-lg shadow-md p-4" data-aos="fade-up" data-aos-delay="300">
         <img src="py-sertif.png" alt="Python Certificate" class="rounded-lg mb-4">
         <h3 class="font-semibold text-pink-800">Belajar Python</h3>
-        <p class="text-sm">Mengikuti pelatihan dasar bahasa Python di Kaggle tahun 2024.</p>
+        <p class="text-sm">MSaya pernah engikuti pelatihan dasar bahasa Python di Kaggle tahun 2024.</p>
       </div>
     </div>
 
@@ -98,12 +98,12 @@
         <div class="bg-white rounded-lg shadow-md p-6" data-aos="fade-up">
           <img src="sertifikat.png" alt="Wakil Ketua" class="rounded-lg mb-4">
           <h4 class="text-lg font-semibold text-pink-800">Wakil Ketua Umum BDI 2024–2025</h4>
-          <p class="text-sm">Menjadi Wakil Ketua Umum Badan Dakwah Islam, belajar kepemimpinan, komunikasi, dan manajemen waktu.</p>
+          <p class="text-sm">Menjadi Wakil Ketua Umum Badan Dakwah Islam, disini saya belajar kepemimpinan, komunikasi, dan manajemen waktu.</p>
         </div>
         <div class="bg-white rounded-lg shadow-md p-6" data-aos="fade-up" data-aos-delay="100">
           <img src="p (1).jpeg" alt="Panitia Acara" class="rounded-lg mb-4">
-          <h4 class="text-lg font-semibold text-pink-800">Kepanitiaan Acara</h4>
-          <p class="text-sm">Terlibat dalam berbagai peran seperti Koordinator, Humas, dan Pengisi Acara, serta belajar teamwork dan tanggung jawab.</p>
+          <h4 class="text-lg font-semibold text-pink-800">Kegiatan Kepanitiaan</h4>
+          <p class="text-sm">Terlibat dalam berbagai peran seperti Ketua Koordinator, Wakil Ketua Pelaksana, Humas, Divisi Acara dan Pengisi Acara. Selama saya mengikuti kegiatan ini saya banyak belajar teamwork dan tanggung jawab.</p>
         </div>
       </div>
     </div>
