--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="bg-white rounded-lg shadow-md p-4" data-aos="fade-up" data-aos-delay="300">
         <img src="py-sertif.png" alt="Python Certificate" class="rounded-lg mb-4">
         <h3 class="font-semibold text-pink-800">Belajar Python</h3>
-        <p class="text-sm">MSaya pernah engikuti pelatihan dasar bahasa Python di Kaggle tahun 2024.</p>
+        <p class="text-sm">Saya pernah mengikuti pelatihan dasar bahasa Python melalui platform Kaggle tahun 2024.</p>
       </div>
     </div>
 
